# bact-archiver

./: .gitignore  .gitmodules  Changelog  MANIFEST.in  README.md  README.rst  THANKS  cysetuptools.py  meson.build  protocol_buffer.py  prototype_buffer.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  python-package.yml  python-publish.yml
backend/: epics_event.pyx
bact_archiver/: __init__.py  archiver.py  archiver2.py  carchiver.py  config.py  errors.py  glob.sh  meson.build  protocol_buffer.py  pyarchiver.py  register.py  utils.py
bact_archiver/backend/: EPICSEvent.proto  EPICSEvent.pxd  EPICSEvent.pyx
bact_archiver/proto/: epics_event.pxd  epics_event.pyx  meson.build  proto_wrap.sh
config/: archiver.cfg
dist_bact_archiver/: bact_archiver_config.py  prototype_buffer.py  prototype_buffer_config.py
doc/: bact-archiver.archiver.rst  bact_archiver.rst  bact_archiver_build.rst  bact_archiver_config.rst  bact_archiver_register.rst  bact_archiver_usage.rst  conf.py  index.rst
proto/: __init__.py  epics_event.pxd  epics_event.pyx  meson.build
proto_gen/: 00README.txt  epics_event.pb.cc  epics_event.pb.h
tests/: common.py  test_carchiver.py  test_carchiver_vector.py  test_config_load.py  test_data_conversion.py
tests/test_data/: 201710010200_rdCur.pb  20171101_MBcurrent.pb  20171101_fullhistogram.pb  20171101_numShots.pb  20171101_selTrgSR.pb  20171101_sram_mask.pb  20171101_sram_maxrms.pb  20171101_sram_mean.pb  20171101_stGun.pb
