# -*- coding: utf-8 -*-
# [build-system]
# requires = ["setuptools >= 61.0", "setuptools-scm", "cython", "numpy"]
# build-backend = "setuptools.build_meta"

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'cython', 'numpy']


[project]
name = "bact-archiver"
version = "0.3.0"
description = "EPICS archiver appliance access using google protobuf"
readme="README.rst"
authors = [
   {name = "Andreas Schälicke", email="andreas.schaelicke@helmholtz-berlin.de"},
   {name = "Pierre Schnizer", email="pierre.schnizer@helmholtz-berlin.de"},
]
license = {text = "GNU General Public License (GPL)"}
classifiers = [
   "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">= 3.7"

dependencies = [
    "numpy",
    "pandas",
    "protobuf >=3.18.3, ==3.*",
    "python-dateutil"
]


[project.urls]
homepage = "https://github.com/hz-b/bact-archiver"
