# -*- coding: utf-8 -*-
[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'cython', 'numpy']


[project]
name = "bact-archiver"
version = "0.3.2"
description = "EPICS archiver appliance access using google protobuf"
readme="README.rst"
authors = [
   {name = "Andreas Schälicke", email="andreas.schaelicke@helmholtz-berlin.de"},
   {name = "Pierre Schnizer", email="pierre.schnizer@helmholtz-berlin.de"},
]
license = {text = "GNU General Public License (GPL)"}
classifiers = [
   "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">= 3.7"

dependencies = [
    "numpy",
    "pandas",
    # alert was solely for python protobuf interface
    # here only c++ compiled protobuf elements are used
    # but better be safe than ....
    "protobuf >=4.25.8",
    "python-dateutil"
]


[project.urls]
homepage = "https://github.com/hz-b/bact-archiver"
