# -*- coding: utf-8 -*-
[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python',
    # meson python includes meson, but I need to find out which
    # version is minimum.
    # hints are changes were between 1.11 and 1.10
    'meson>=1.11',
    'cython>=1.11',
    'numpy'
]


[project]
name = "bact-archiver"
version = "0.4.0"
description = "EPICS archiver appliance access using google protobuf"
readme="README.rst"
authors = [
   {name = "Andreas Schälicke", email="andreas.schaelicke@helmholtz-berlin.de"},
   {name = "Pierre Schnizer", email="pierre.schnizer@helmholtz-berlin.de"},
]
license = {text = "GNU General Public License (GPL)"}
classifiers = [
   "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">= 3.7"

dependencies = [
    "numpy",
    "pandas",
    # alert was solely for python protobuf interface
    # here only c++ compiled protobuf elements are used
    # but better be safe than ....
    "protobuf >=4.25.8",
    "python-dateutil",
    # Todo: need to replace it with zoneinfo
    "pytz"
]


[project.urls]
homepage = "https://github.com/hz-b/bact-archiver"
