# -*- coding: utf-8 -*-

[metadata]
name = bact-archiver
fullname = BACT epics archiver appliance access
version = 0.0.0
url = https://github.com/hz-b/bact-archiver
author = Andreas Schälicke, Pierre Schnizer
author_email = andreas.schaelicke@helmholtz-berlin.de
               pierre.schnizer@helmholtz-berlin.de
description = EPICS archiver appliance access using google protobuf
classifiers =
	 Development Status :: 4 - Beta
         Intended Audience :: Science/Research
         License :: OSI Approved :: GNU General Public License (GPL)
         Programming Language :: Python :: 3
         Topic :: Scientific/Engineering :: Physics

[build-system]
requires = setup_tools


[options]
packages = find:
setup_requires = cython
# install_requires = cython
requires = numpy
include_package_data = True
# zip_safe = False

# [package_data]
[options.data_files]
config = config/archiver.cfg

[options.extras_require]
dev = cython

# The configuration of the following two build steps depens on each
# other.
[build_proto_c]
python = True
cpp = True
src_dir = proto
build_dir = proto_gen
pydir = bact_archiver
source = proto/epics_event.proto

[cython-module: bact_archiver.epics_event]
include_dirs = proto_gen
               eval(__import__('numpy').get_include())

# The directory will be typically match the src_dir directory
# of the build_proto_c section for the .pyx file and the
# build_dir for the .cc file
sources = proto/epics_event.pyx
          proto_gen/epics_event.pb.cc
libraries = protobuf
language = c++
show-all-warnings = True
